--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,9 @@
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.34.0"
+    "readline": "^1.3.0",
+    "sequelize": "^6.34.0",
+    "twilio": "^4.21.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
